force-app/main/default/objects/PBS_EuasPerformance__c/PBS_EuasPerformance__c.object-meta.xml
<CustomObject>
    <description>PBS Building EUAS performance data</description>
    <label>EUAS Performance</label>
    <nameField>
        <label>The Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EUAS Performance Readings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>