force-app/main/default/objects/PBS_EuasPerformance__c/fields/Building_Designation__c.field-meta.xml
<CustomField>
    <fullName>Building_Designation__c</fullName>
    <description>Building Designation</description>
    <label>Building Designation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Metering</fullName>
            </value>
            <value>
                <fullName>Building Watchlist</fullName>
            </value>
            <value>
                <fullName>Deregulated Accounts</fullName>
            </value>
            <value>
                <fullName>EISA 2007 Covered Facility</fullName>
            </value>
            <value>
                <fullName>ESPC Projects</fullName>
            </value>
            <value>
                <fullName>Historic Bldg - Post WWII</fullName>
            </value>
            <value>
                <fullName>Historic Bldg - Pre-WWII</fullName>
            </value>
            <value>
                <fullName>Landscape Irrigation</fullName>
            </value>
            <value>
                <fullName>Portfolio Lease</fullName>
            </value>
            <value>
                <fullName>Recovery Act Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>