force-app/main/default/objects/PBS_EuasPerformance__c/fields/BuildingCategory__c.field-meta.xml
<CustomField>
    <fullName>BuildingCategory__c</fullName>
    <description>Building Category</description>
    <label>Building Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deregulated Accounts</fullName>
            </value>
            <value>
                <fullName>Landscape Irrigation</fullName>
            </value>
            <value>
                <fullName>Portfolio Lease</fullName>
            </value>
            <value>
                <fullName>EISA 2007 Covered Facility</fullName>
            </value>
            <value>
                <fullName>Recovery Act Project</fullName>
            </value>
            <value>
                <fullName>Advanced Metering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>