force-app/main/default/objects/PBS_EuasPerformance__c/fields/BuildingDesignation__c.field-meta.xml
<CustomField>
    <fullName>BuildingDesignation__c</fullName>
    <description>Building Designation</description>
    <label>Building Designation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active Gov. Owned</fullName>
            </value>
            <value>
                <fullName>Non-Goal Gov. Owned</fullName>
            </value>
            <value>
                <fullName>Active Lease</fullName>
            </value>
            <value>
                <fullName>Non-Goal Lease</fullName>
            </value>
            <value>
                <fullName>Heating Plant, Reimbursable</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Energy Intensive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>