force-app/main/default/objects/PBS_EuasPerformance__c/fields/BuildingFacilityCode__c.field-meta.xml
<CustomField>
    <fullName>BuildingFacilityCode__c</fullName>
    <description>Building Num</description>
    <inlineHelpText>Building Num</inlineHelpText>
    <label>Building or Facility Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>