force-app/main/default/objects/PBS_EuasPerformance__c/fields/CoalAmt__c.field-meta.xml
<CustomField>
    <fullName>CoalAmt__c</fullName>
    <description>Water Amt</description>
    <inlineHelpText>Water Amt</inlineHelpText>
    <label>Coal Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>