force-app/main/default/objects/PBS_EuasPerformance__c/fields/CoalCostPerUnit__c.field-meta.xml
<CustomField>
    <fullName>CoalCostPerUnit__c</fullName>
    <description>CWater Cost per Unit</description>
    <formula>if(or(ISNULL(CoalAmt__c), CoalAmt__c=0),NULL, CoalCost__c/CoalAmt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CWater Cost per Unit</inlineHelpText>
    <label>Coal Cost Per Unit</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>