force-app/main/default/objects/PBS_EuasPerformance__c/fields/CwaterAmt__c.field-meta.xml
<CustomField>
    <fullName>CwaterAmt__c</fullName>
    <description>CWater Amt</description>
    <label>CWater Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>