force-app/main/default/objects/PBS_EuasPerformance__c/fields/CwaterCost__c.field-meta.xml
<CustomField>
    <fullName>CwaterCost__c</fullName>
    <description>CWater Cost</description>
    <label>CWater Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>