force-app/main/default/objects/PBS_EuasPerformance__c/fields/DmdAmt__c.field-meta.xml
<CustomField>
    <fullName>DmdAmt__c</fullName>
    <description>Dmd Amt</description>
    <label>Dmd Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>