force-app/main/default/objects/PBS_EuasPerformance__c/fields/DmdCost__c.field-meta.xml
<CustomField>
    <fullName>DmdCost__c</fullName>
    <description>Dmd Cost</description>
    <label>Dmd Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>