force-app/main/default/objects/PBS_EuasPerformance__c/fields/ElecCost__c.field-meta.xml
<CustomField>
    <fullName>ElecCost__c</fullName>
    <description>Elec Cost</description>
    <label>Elec Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>