force-app/main/default/objects/PBS_EuasPerformance__c/fields/ElecCostPerUnit__c.field-meta.xml
<CustomField>
    <fullName>ElecCostPerUnit__c</fullName>
    <description>CWater Cost per Unit</description>
    <formula>if(or(ISNULL(ElecAmt__c), ElecAmt__c=0),NULL, ElecCost__c/ElecAmt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CWater Cost per Unit</inlineHelpText>
    <label>Elec Cost Per Unit</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>