force-app/main/default/objects/PBS_EuasPerformance__c/fields/EnergyUsageIntensity__c.field-meta.xml
<CustomField>
    <fullName>EnergyUsageIntensity__c</fullName>
    <description>KBtu/SQ FT/per year</description>
    <formula>if(Gsf__c=0,null,TotalEnergyBtu__c/Gsf__c*1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Energy Usage Intensity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>