force-app/main/default/objects/PBS_EuasPerformance__c/fields/FiscalMonth__c.field-meta.xml
<CustomField>
    <fullName>FiscalMonth__c</fullName>
    <description>Fiscal Month</description>
    <label>Fiscal Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>