force-app/main/default/objects/PBS_EuasPerformance__c/fields/GasAmt__c.field-meta.xml
<CustomField>
    <fullName>GasAmt__c</fullName>
    <description>Gas Amt</description>
    <label>Gas Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>