force-app/main/default/objects/PBS_EuasPerformance__c/fields/GasCost__c.field-meta.xml
<CustomField>
    <fullName>GasCost__c</fullName>
    <description>Gas Cost</description>
    <label>Gas Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>