force-app/main/default/objects/PBS_EuasPerformance__c/fields/GasCostPerUnit__c.field-meta.xml
<CustomField>
    <fullName>GasCostPerUnit__c</fullName>
    <description>CWater Cost per Unit</description>
    <formula>if(or(ISNULL(GasAmt__c), GasAmt__c=0),NULL, GasCost__c/GasAmt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CWater Cost per Unit</inlineHelpText>
    <label>Gas Cost Per Unit</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>