force-app/main/default/objects/PBS_EuasPerformance__c/fields/MonthCnt__c.field-meta.xml
<CustomField>
    <fullName>MonthCnt__c</fullName>
    <description>The number of month&apos;s being considered in this row</description>
    <inlineHelpText>The number of month&apos;s being considered in this row</inlineHelpText>
    <label>Month Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>