force-app/main/default/objects/PBS_EuasPerformance__c/fields/OilAmt__c.field-meta.xml
<CustomField>
    <fullName>OilAmt__c</fullName>
    <description>Oil Amt</description>
    <label>Oil Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>