force-app/main/default/objects/PBS_EuasPerformance__c/fields/OilCost__c.field-meta.xml
<CustomField>
    <fullName>OilCost__c</fullName>
    <description>Oil Cost</description>
    <label>Oil Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>