force-app/main/default/objects/PBS_EuasPerformance__c/fields/OilCostPerUnit__c.field-meta.xml
<CustomField>
    <fullName>OilCostPerUnit__c</fullName>
    <description>CWater Cost per Unit</description>
    <formula>if(or(ISNULL(OilAmt__c), OilAmt__c=0),NULL, OilCost__c/OilAmt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CWater Cost per Unit</inlineHelpText>
    <label>Oil Cost Per Unit</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>