force-app/main/default/objects/PBS_EuasPerformance__c/fields/RenElecCost__c.field-meta.xml
<CustomField>
    <fullName>RenElecCost__c</fullName>
    <description>Ren Elec Cost</description>
    <label>Ren Elec Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>