force-app/main/default/objects/PBS_EuasPerformance__c/fields/RenElecCostPerUnit__c.field-meta.xml
<CustomField>
    <fullName>RenElecCostPerUnit__c</fullName>
    <description>CWater Cost per Unit</description>
    <formula>if(or(ISNULL(RenElecAmt__c), RenElecAmt__c=0),NULL, RenElecCost__c/RenElecAmt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CWater Cost per Unit</inlineHelpText>
    <label>Ren Elec Cost Per Unit</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>