force-app/main/default/objects/PBS_EuasPerformance__c/fields/RenGasAmt__c.field-meta.xml
<CustomField>
    <fullName>RenGasAmt__c</fullName>
    <description>Ren Gas Amt</description>
    <label>Ren Gas Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>