force-app/main/default/objects/PBS_EuasPerformance__c/fields/RenGasCost__c.field-meta.xml
<CustomField>
    <fullName>RenGasCost__c</fullName>
    <description>Ren Gas Cost</description>
    <label>Ren Gas Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>