force-app/main/default/objects/PBS_EuasPerformance__c/fields/RenGasCostPerUnit__c.field-meta.xml
<CustomField>
    <fullName>RenGasCostPerUnit__c</fullName>
    <description>CWater Cost per Unit</description>
    <formula>if(or(ISNULL(RenGasAmt__c), RenGasAmt__c=0),NULL, RenGasCost__c/RenGasAmt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CWater Cost per Unit</inlineHelpText>
    <label>Ren Gas Cost Per Unit</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>