force-app/main/default/objects/PBS_EuasPerformance__c/fields/SteamCost__c.field-meta.xml
<CustomField>
    <fullName>SteamCost__c</fullName>
    <description>Steam Cost</description>
    <label>Steam Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>