force-app/main/default/objects/PBS_EuasPerformance__c/fields/SteamCostPerUnit__c.field-meta.xml
<CustomField>
    <fullName>SteamCostPerUnit__c</fullName>
    <description>CWater Cost per Unit</description>
    <formula>if(or(ISNULL(SteamAmt__c), SteamAmt__c=0),NULL, SteamCost__c/SteamAmt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CWater Cost per Unit</inlineHelpText>
    <label>Steam Cost Per Unit</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>