force-app/main/default/objects/PBS_EuasPerformance__c/fields/TotalEnergyBtu__c.field-meta.xml
<CustomField>
    <fullName>TotalEnergyBtu__c</fullName>
    <formula>((CwaterAmt__c*12000) + 
(ElecAmt__c *3412.142) + 
(GasAmt__c*1031) + 
(OilAmt__c*138700) + 
(SteamAmt__c*1000000))/1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Energy BTU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>