force-app/main/default/objects/PBS_EuasPerformance__c/fields/WaterCost__c.field-meta.xml
<CustomField>
    <fullName>WaterCost__c</fullName>
    <description>Water Cost</description>
    <label>Water Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>