force-app/main/default/objects/PBS_EuasPerformance__c/fields/WaterCostPerUnit__c.field-meta.xml
<CustomField>
    <fullName>WaterCostPerUnit__c</fullName>
    <description>CWater Cost per Unit</description>
    <formula>if(or(ISNULL(WaterAmt__c), WaterAmt__c=0),NULL, WaterCost__c/WaterAmt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CWater Cost per Unit</inlineHelpText>
    <label>Water Cost Per Unit</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>