force-app/main/default/objects/PBS_EuasPerformance__c/recordTypes/Annual_Performance.recordType-meta.xml
<RecordType>
    <fullName>Annual_Performance</fullName>
    <active>true</active>
    <description>Annual Performance Data</description>
    <label>Annual Performance</label>
</RecordType>