force-app/main/default/objects/PBS_EuasPerformance__c/recordTypes/Monthly_Performance.recordType-meta.xml
<RecordType>
    <fullName>Monthly_Performance</fullName>
    <active>true</active>
    <description>Monthly Performance Data</description>
    <label>Monthly Performance</label>
</RecordType>