force-app/main/default/objects/PBS_EuasPerformance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FiscalYear__c</columns>
    <columns>BuildingId__c</columns>
    <columns>BuildingCategory__c</columns>
    <columns>BuildingDesignation__c</columns>
    <columns>BuildingFacilityCode__c</columns>
    <columns>TotalEnergyBtu__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>